# better-fnmatch

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml  renovate.json
.github/workflows/: CI.yml
python/better_fnmatch/: __init__.py
python/globlin/: __init__.py  globlin.pyi
src/: glob.rs  lib.rs
tests/: test_fnmatch.py
